--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@prisma/client": "6.17.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "express": "4.21.2",
     "helmet": "8.1.0",
     "pg": "8.16.3",
     "reflect-metadata": "0.2.2",
@@ -51,7 +52,7 @@
     "@nestjs/testing": "11.0.1",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.7",
-    "@types/express": "5.0.3",
+    "@types/express": "4.17.21",
     "@types/node": "22.18.10",
     "eslint": "9.18.0",
     "eslint-config-prettier": "10.0.1",
@@ -59,7 +60,7 @@
     "globals": "16.0.0",
     "jest": "29.7.0",
     "prettier": "3.4.2",
-    "prisma": "^6.17.1",
+    "prisma": "6.17.1",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
     "ts-jest": "29.2.5",
