--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,16 +9,20 @@ services:
     container_name: mock-fitband-api-app
     ports:
       - "${APP_PORT:-8080}:8080"
+    env_file:
+      - .env.prod
     environment:
       - NODE_ENV=production
       - PORT=8080
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-mock_fitband_db}?schema=public
+      # DATABASE_URL will be read from .env.prod file
+      - DATABASE_URL=${DATABASE_URL}
       - RUN_MIGRATIONS=${RUN_MIGRATIONS:-true}
       - CORS_ORIGIN=${CORS_ORIGIN:-*}
       - LOG_LEVEL=${LOG_LEVEL:-info}
-    depends_on:
-      db:
-        condition: service_healthy
+    # Remove depends_on since we're using external database
+    # depends_on:
+    #   db:
+    #     condition: service_healthy
     restart: unless-stopped
     networks:
       - app-network
@@ -34,32 +38,32 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  db:
-    image: postgres:15-alpine
-    container_name: mock-fitband-api-db
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB:-mock_fitband_db}
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - PGDATA=/var/lib/postgresql/data/pgdata
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    # Database port NOT exposed externally - only accessible internally via Docker network
-    # The app container can still connect using: postgresql://postgres:password@db:5432/...
-    restart: unless-stopped
-    networks:
-      - app-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
-      interval: 10s
-      timeout: 3s
-      retries: 5
-      start_period: 10s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+  # Local database service - COMMENTED OUT when using external cloud database
+  # Uncomment this section if you want to use a local database instead
+  # db:
+  #   image: postgres:15-alpine
+  #   container_name: mock-fitband-api-db
+  #   environment:
+  #     - POSTGRES_DB=${POSTGRES_DB:-mock_fitband_db}
+  #     - POSTGRES_USER=${POSTGRES_USER:-postgres}
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #     - PGDATA=/var/lib/postgresql/data/pgdata
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   restart: unless-stopped
+  #   networks:
+  #     - app-network
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+  #     interval: 10s
+  #     timeout: 3s
+  #     retries: 5
+  #     start_period: 10s
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "10m"
+  #       max-file: "3"
 
 volumes:
   postgres_data:
